# esp32

./: .gitignore
binarySemaphore/: CMakeLists.txt
binarySemaphore/main/: main.c
ble_server/: sdkconfig  sdkconfig.old
ble_server/main/: CMakeLists.txt  ble_server.c
blinky/: CMakeLists.txt
blinky/main/: CMakeLists.txt  hello_world_main.c  main.c
c-project/: CMakeLists.txt
c-project/main/: main.c
capturingInput/: CMakeLists.txt
delays/: CMakeLists.txt
delays/main/: hello_world_main.c  main.c
esp1/: CMakeLists.txt
esp1/main/: hello_world_main.c  main.c
esp_timer/: CMakeLists.txt
esp_timer/main/: main.c
flash/: flash.xlsx  sdkconfig.old
groupEvent/: CMakeLists.txt
groupEvent/main/: main.c
hello-world-mac/: CMakeLists.txt
keyboardInput/: CMakeLists.txt
logging/: CMakeLists.txt  sdkconfig  sdkconfig.old
manualDebugging/: CMakeLists.txt
menuconfig/: CMakeLists.txt  sdkconfig  sdkconfig.old
module/: CMakeLists.txt
module2/: CMakeLists.txt
mutex/: CMakeLists.txt
qemu-test-1/: CMakeLists.txt
queue/: CMakeLists.txt
randomNumber/: CMakeLists.txt
softap/: CMakeLists.txt  sdkconfig
sram/: CMakeLists.txt
task-notification1/: CMakeLists.txt
task-notification2/: CMakeLists.txt
tasks/: CMakeLists.txt
timer/: CMakeLists.txt
wifi-sniffer/: sdkconfig  sdkconfig.old
wifi-sniffer/main/: CMakeLists.txt  Kconfig.projbuild  mgmt.h  utils.c  utils.h  wifi_sniffer_main.c  wifi_sniffer_main.c_git  wifi_sniffer_main.c_org
wifi-station-connect/: CMakeLists.txt  sdkconfig  sdkconfig.old
wifi_dual_mode/: sdkconfig  sdkconfig.old
(+34 files in other folders)
